# kodilla_tasks_10_2022

./: Dockerfile  docker-compose.yml  requirements.txt  setup.cfg  tox.ini  travis.yml
.github/workflows/: tox.yml
task_1_1/: is_palidrome.py
task_1_2/: factorization.py  test_factorization.py
task_2_1/: numerical_systems.py
task_2_1/tests/: test_numerical_systems.py
task_2_2/: app.py  config.cfg  database.py  db.py  myfile.json  querries.py  routes.py  scoreboard.py
task_2_2/data/: equipment.db
task_2_2/modules/: difficulty.py  quiz.py  quiz_settings.py  user_pass.py  users.py
task_2_2/modules/tests/: test_difficulty.py  test_quiz.py  test_quiz_settings.py  test_user_pass.py  test_users.py
task_2_2/templates/: base.html  edit_user.html  index.html  login.html  macros.html  menu.html  new_quiz.html  new_user.html  users.html
task_2_2/tests/: test_app.py  test_quiz.py  test_routes.py  test_scoreboard.py  test_sorted.json  test_unranked.json  test_user_interface.py  test_users.py
