[metadata]
name = task_2_2
version = 1.0

[options]
packages = find:
install_requires =
    flask
    flask_sqlalchemy
    sqlalchemy
    pytest
    pytest-cov
    jsonify
    pytest-mock
    webtest
    selenium
    webdriver-manager; python_version == "3.9"

[options.packages.find]
exclude = tests